# trading-bot

./: .gitignore  README.md  pyproject.toml
backtests/: __init__.py  baseline.py  config.py  event_study.py  metrics.py  regimes.py  robustness.py  sanity.py  sim_execution.py  walkforward.py
config/: ab_baseline.yaml  ab_funding_gate.yaml  ab_funding_retest.yaml  ab_funding_retest_detail15m.yaml  ab_funding_retest_detail15m_fng.yaml  fetch_15m.yaml  ga_space.yaml  settings.yaml
configs/: market_structure.yaml  regime_shift.yaml
docs/: README_VALIDATION.md
reports/20260219T193444/: baseline_label_metrics.json  baseline_trades.csv  event_study_top20.txt  regime_event_study.csv
reports/20260219T193557/: event_study.csv  execution_metrics.json  (+6 more)
scripts/: run_backtest_market_structure.py  run_backtest_regime_shift.py  run_validation.py
tests/: test_backtest_timing.py  test_break_confirm.py  test_cli_compare_runs.py  test_compare_requires_two_runs.py  test_engine_simple_synthetic.py  test_features_no_leak.py  test_fng_alignment_hourly.py  test_ga_checkpoint.py  test_ga_eval_cache.py  test_ga_fitness.py  test_ga_resume_detect.py  test_ga_sanitize_init.py  test_ga_space.py  test_ma200_and_regime_patch.py  test_major_levels.py  test_market_structure.py  test_market_structure_hhhl_engine.py  test_market_structure_hhhl_strategy.py  test_no_lookahead.py  test_regime.py  test_regime_funding_hysteresis.py  test_router_v2_controls.py  test_runs_artifacts.py  test_sizing.py  test_stop_intrabar.py  test_strategy_modes.py  test_strategy_router.py  test_structural_controls.py
(+117 files in other folders)
