[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bot-btc-margin-1h"
version = "0.1.0"
description = "MVP de bot BTCUSDT 1H com backtest, paper e live margin Binance"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "pydantic>=2.5",
  "pyyaml>=6.0",
  "typer>=0.12",
  "rich>=13.0",
  "pyarrow>=12.0",
  "requests>=2.31",
  "python-binance>=1.0.19",
  "pytest>=8.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
